--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -13,8 +13,7 @@
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="imageview"
-        android:adjustViewBounds="true"/>
+        android:transitionName="imageview"/>
 
     <ImageView
         android:layout_width="wrap_content"
