--- a/app/src/main/res/layout/item_girl.xml
+++ b/app/src/main/res/layout/item_girl.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+              android:layout_margin="2dp"
+              android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageview"
