--- a/app/src/main/res/layout/item_girl.xml
+++ b/app/src/main/res/layout/item_girl.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_margin="2dp"
               android:layout_height="wrap_content">
@@ -13,7 +12,12 @@
         android:adjustViewBounds="true"/>
     <TextView
         android:id="@+id/textview"
-        android:visibility="gone"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="#30000000"
+        android:paddingRight="@dimen/view_margin"
+        android:textColor="@color/white"
+        android:gravity="center_vertical|right"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+        android:layout_height="40dp"/>
+</RelativeLayout>
