--- a/app/src/main/res/layout/item_girl.xml
+++ b/app/src/main/res/layout/item_girl.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_margin="2dp"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/imageview"
@@ -15,9 +16,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:background="#30000000"
-        android:paddingRight="@dimen/view_margin"
+        android:padding="@dimen/view_margin"
+        android:visibility="gone"
         android:textColor="@color/white"
         android:gravity="center_vertical|right"
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
