--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
 
     <style name="ActionBarPopupThemeOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!--ImageActivity-->
     <style name="ViewerTheme" parent="AppTheme">
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAnimationStyle">@null</item>
