--- a/app/src/main/res/layout/item_common_tab.xml
+++ b/app/src/main/res/layout/item_common_tab.xml
@@ -8,29 +8,32 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="6dp"
         app:cardCornerRadius="3dp"
         android:elevation="8dp">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
+                android:visibility="gone"
                 android:transitionName="imageview"
                 android:adjustViewBounds="true"/>
             <TextView
                 android:id="@+id/title_textview"
-                android:layout_centerVertical="true"
-                android:background="#60000000"
+                android:background="#08000000"
                 android:text=""
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:padding="@dimen/view_margin"
-                android:textColor="@color/white"
+                android:textColor="@color/font_333"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </RelativeLayout>
