--- a/app/src/main/res/layout/item_common_tab.xml
+++ b/app/src/main/res/layout/item_common_tab.xml
@@ -23,16 +23,32 @@
                 android:visibility="gone"
                 android:transitionName="imageview"
                 android:adjustViewBounds="true"/>
-            <TextView
-                android:id="@+id/title_textview"
-                android:background="#08000000"
-                android:text=""
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:padding="@dimen/view_margin"
-                android:textColor="@color/font_333"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="#08000000"
+                android:padding="@dimen/view_margin"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/title_textview"
+                    android:text=""
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:textColor="@color/font_333"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/name_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/left_margin"
+                    android:textSize="12sp"
+                    android:textColor="@color/font_999"
+                    android:text=""/>
+
+            </LinearLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
